# u5gc

./: .gitignore  CMakeLists.txt
lib/app/: CMakeLists.txt  abts.c  abts.h  arc4random.c  ogs-3gpp-types.c  ogs-3gpp-types.h  ogs-abort.c  ogs-app.h  ogs-config.c  ogs-config.h  ogs-conv.c  ogs-conv.h  ogs-core.c  ogs-core.h  ogs-env.c  ogs-env.h  ogs-epoll.c  ogs-errno.c  ogs-fsm.c  ogs-fsm.h  ogs-getopt.c  ogs-getopt.h  ogs-hash.c  ogs-hash.h  ogs-init.c  ogs-init.h  ogs-kqueue.c  ogs-list.h  ogs-log.c  ogs-log.h  ogs-macros.h  ogs-memory.c  ogs-memory.h  ogs-misc.c  ogs-misc.h  ogs-notify.c  ogs-notify.h  ogs-pkbuf.c  ogs-pkbuf.h  ogs-poll.c  (+39 more)
lib/gtp/: CMakeLists.txt  build.c  build.h  conv.c  conv.h  message.c  (+10 more)
lib/pfcp/: CMakeLists.txt  context.c  context.h  conv.c  conv.h  meson.build  message.c  message.h  n4-build.c  n4-build.h  node.c  node.h  ogs-pfcp.h  path.c  path.h  types.c  types.h  xact.c  xact.h
lib/pfcp/support/: README.md  pfcp-tlv.py
lib/pfcp/support/cache/: tlv-group-list.py  tlv-msg-10.py  tlv-msg-12.py  tlv-msg-13.py  tlv-msg-14.py  tlv-msg-15.py  tlv-msg-2.py  tlv-msg-3.py  tlv-msg-4.py  tlv-msg-5.py  tlv-msg-50.py  tlv-msg-51.py  tlv-msg-52.py  tlv-msg-53.py  tlv-msg-55.py  tlv-msg-56.py  tlv-msg-57.py  tlv-msg-6.py  tlv-msg-7.py  tlv-msg-8.py  tlv-msg-9.py  tlv-msg-list.py  tlv-type-list.py
upf/: CMakeLists.txt  app.c  context.c  context.h  event.c  event.h  gtp-path.c  gtp-path.h  init.c  ipfw.c  ipfw.h  meson.build  n4-build.c  n4-build.h  n4-handler.c  n4-handler.h  pfcp-path.c  pfcp-path.h  pfcp-sm.c  timer.c  timer.h  upf-sm.c  upf-sm.h
(+35 files in other folders)
